# veille-typoed

./: README.md  manage.py  pyproject.toml
templates/: master.html
tests/: admin.py  models.py  urls.py  views.py
tests/migrations/: 0001_initial.py  0002_remove_test_datetime_test_date.py  0003_alter_test_accuracy.py  0004_alter_test_wpm.py  0005_remove_word_lang_remove_test_lang_delete_lang_and_more.py  0006_remove_test_user_test_username.py
tests/static/tests/: test.js
tests/templates/tests/: highscores.html  take_test.html
typoed/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: user_detail.html
