[tool.poetry]
name = "typoed"
version = "0.1.0"
description = "A typing test game written in python."
authors = ["Neil Carrie <neil.carrie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
wordfreq = "^3.0.3"
django-bootstrap-v5 = "^1.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
